2005-05-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-text.el (shimbun-fill-line): Make it work correctly
	also with XEmacs.

	* shimbun/sb-mainichi.el (shimbun-mainichi-prefer-text-plain): New
	variable.
	(shimbun-mainichi-get-headers): Use shimbun-strip-cr.
	(shimbun-mainichi-prepare-article): Use
	shimbun-with-narrowed-article; remove the paragraph separators in
	the column.yoroku group; open paragraphs and fix the position of
	the footer in text/plain articles.

	* shimbun/sb-yahoo.el (shimbun-make-contents): Use
	shimbun-with-narrowed-article; fix the picture tag.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-get-top-header): Fix
	message-id.
	(shimbun-yomiuri-prepare-article): Use
	shimbun-with-narrowed-article.

	* shimbun/shimbun.el (shimbun-insert-footer): New function.
	(shimbun-make-html-contents): Use it.
	(shimbun-footer): Don't prepend a newline; use <div align="left">
	instead of <p align="left">.
	(shimbun-header-insert-and-buffer-string): Use
	shimbun-insert-footer.
	(shimbun-with-narrowed-article): New macro.

2005-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-html.el: Don't require shimbun.
	(shimbun-asahi-html-prefer-text-plain): New constant.
	(shimbun-asahi-html-content-start): Move to sb-asahi.el.
	(shimbun-asahi-html-content-end): Ditto.
	(shimbun-make-contents): Remove.

	* shimbun/sb-asahi.el (shimbun-asahi): Don't inherit sb-text.
	(shimbun-asahi-prefer-text-plain): New variable.
	(shimbun-asahi-content-start): Move from sb-asahi-html.el.
	(shimbun-asahi-content-end): Ditto.
	(shimbun-asahi-text-content-start): Rename from
	shimbun-asahi-content-start.
	(shimbun-asahi-text-content-end): Rename from
	shimbun-asahi-content-end.
	(initialize-instance): Set the shimbun class variables
	content-start and content-end for the html articles.

	* shimbun/sb-text.el (shimbun-make-text-contents): New function
	extracted from shimbun-make-contents.
	(shimbun-make-contents): Use it.
